<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="YOGA"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/aclonica"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quote5"
                android:textStyle="bold"
                android:textColor="#272727"
                android:fontFamily="@font/raleway"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/virkshasana"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fd3"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="Virkshasana"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/virkshasana"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/virkshasana"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cobrasana"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="Cobrasana"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/cobras"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/cobrasana"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t2" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pranayama"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F234"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="Pranayama"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/multibreaths"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/pranayama"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t3" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/yogasana"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F43"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="Yogaasana"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/yogaasana"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/yogasana"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t5" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/utkatasana"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#158446"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/t6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="Utkatasana"
                        android:textColor="#000"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="6dp" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/posture"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:text="@string/utkatasana1"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="#000"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/t6" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>